# ansible-builder

./: .cherry_picker.toml  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  CODEOWNERS  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  TODO.org  bindep.txt  date  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_pulp.sh  tox.ini
.github/: labeler.yml  patchback.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_report.yml  feature_request.yml
.github/test-scripts/: setup_pulp.sh
.github/workflows/: ci.yml  triage_existing.yml  triage_new.yml
.zuul-repos.d/: CentOS-Linux-AppStream.repo  CentOS-Linux-BaseOS.repo  CentOS-Linux-Extras.repo  CentOS-Linux-PowerTools.repo
.zuul.d/: jobs.yaml  project.yaml
ansible_builder/: __main__.py  cli.py  collections.py  colors.py  constants.py  containerfile.py  ee_schema.py  exceptions.py  introspect.py  main.py  policies.py  requirements.py  steps.py  user_definition.py  utils.py  version.py
ansible_builder/_target_scripts/: assemble  check_ansible  check_galaxy  entrypoint  install-from-bindep  introspect.py
ansible_builder/requirements_parser/: __init__.py  requirement.py
ansible_builder/steps/: galaxy.py  pip.py
ansible_exec_env/: cli.py  main.py
demo/: execution-environment.yml  requirements.txt  requirements.yml
demo/v3_demo/: execution-environment.yml
docs/: Makefile  collection_metadata.rst  conf.py  definition.rst  glossary.rst  index.rst  installation.rst  make.bat  porting_guide_v3.rst  requirements.in  requirements.txt  usage.rst
docs/scenario_guides/: copy_ee.yml  env_ee.yml  galaxy_ansible.cfg  galaxy_ee.yml  scenario_copy.rst  scenario_custom.rst  scenario_using_env.rst
examples/pytz/: README.md  requirements.yml
examples/pytz/env/: settings
packaging/rpm/: Dockerfile.epel-7-x86_64  Dockerfile.epel-8-x86_64  ansible-builder.spec.j2  docker-compose.yml
src/ansible_builder/: __main__.py  cli.py  colors.py  constants.py  containerfile.py  ee_schema.py  exceptions.py  main.py  policies.py  user_definition.py  utils.py
src/ansible_builder/_target_scripts/: assemble  entrypoint  install-from-bindep  introspect.py  pip_install
test/: conftest.py  constraints.txt  requirements.txt  test_ansible_exec_env.py  test_cli.py  test_introspect.py  test_main.py  test_requirements.py  test_steps.py  test_utils.py
test/data/: README.md  ansible-test.cfg  nested-galaxy.yml  run.sh
test/data/alternate_collections/ansible_collections/test_collection/test_yaml_extension/meta/: execution-environment.yaml
test/data/ansible.posix.at/: execution-environment.yml  requirements.yml  run.sh
test/data/ansible.posix.at/env/: settings
test/data/ansible.posix.at/project/: ansible.posix.at.yml
test/data/ansible_collections/other/reqfile/: requirements.txt
test/data/ansible_collections/test/metadata/: my-requirements.txt
test/data/ansible_collections/test/metadata/meta/: execution-environment.yml
test/data/ansible_collections/test/reqfile/: extra_req.txt  requirements.txt
test/data/ansible_collections/test/splitted_lines/: requirements.txt
test/data/awx/: bindep.txt  execution-environment.yml  requirements.yml  run.sh
test/data/awx/env/: settings
test/data/awx/project/: awx.yml
test/data/blank/: execution-environment.yml  run.sh
test/data/blank/env/: settings
test/data/blank/project/: debug.yml
test/data/build_args/: base-image.yml  execution-environment.yml
test/data/build_fail/: bindep-fail1.yml  bindep1.txt  execution-environment.yml  user-ee.yml
test/data/definition_files/: bad.yml  invalid.yml  no_galaxy.yml  no_python.yml
test/data/foo/: requirements.yml
test/data/minimal_fast/: execution-environment.yml
test/data/needs_git/: execution-environment.yml  requirements.txt
test/data/nested_galaxy_file/foo/: requirements.yml
test/data/pip/: execution-environment.yml  run.sh
test/data/pip/env/: settings
test/data/pip/project/: pip.yml  pip_bottle.yml  requirements.txt
test/data/prepend_steps/: execution-environment.yml
test/data/pytz/: execution-environment.yml  run.sh
test/data/pytz/env/: settings
test/data/pytz/pub/: run.sh
test/data/pytz_pub/: README.md  run.sh
test/data/pytz_pub/env/: settings
test/data/subversion/: bindep.txt  execution-environment.yml  run.sh
test/data/subversion/env/: settings
test/data/subversion/project/: subversion.yml
test/data/v2/: RPM-GPG-KEY-redhat-release
test/data/v2/complete/: ee.yml
test/data/v2/pre_and_post/: ee.yml
test/data/v2/sig_req/: ee-good.yml  ee-no-orig.yml
test/data/v3/check_ansible/: ee-missing-ansible.yml  ee-missing-runner.yml  ee-skip.yml
test/data/v3/complete/: ee.yml
test/data/v3/pre_and_post/: ee.yml
test/data/v3/sig_req/: ee-good.yml  ee-no-orig.yml
test/integration/: conftest.py  test_build.py  test_create.py  test_help.py  test_introspect.py  test_introspect_cli.py
test/pulp_integration/: test_policies.py  test_v3.py
test/unit/: test_cli.py  test_containerfile.py  test_introspect.py  test_main.py  test_policies.py  test_requirements.py  test_steps.py  test_user_definition.py  test_utils.py
