[build-system]
requires = ["setuptools>=45, <=67.7.2", "setuptools-scm[toml]>=6.2, <=7.1.0"]  # pin max versions of build deps and update as needed
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pylint.main]
output-format = "colorized"
max-line-length=120
disable = [
  "all",

  # Some codes we will leave disabled
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring

  "R0902",  # too-many-instance-attributes

  "W1514",  # unspecified-encoding
]

enable = [
  "C0206",  # consider-using-dict-items
  "C0209",  # consider-using-f-string
  "C0411",  # wrong-import-order

  "E1101",  # no-member

  "R0205",  # useless-object-inheritance
  "R0402",  # consider-using-from-import
  "R1705",  # no-else-return
  "R1725",  # super-with-arguments
  "R1735",  # use-dict-literal

  "W0102",  # dangerous-default-value
  "W0707",  # raise-missing-from
  "W1203",  # logging-fstring-interpolation

]
