[build-system]
requires = ["setuptools>=45, <=67.7.2", "setuptools-scm[toml]>=6.2, <=7.1.0"]  # pin max versions of build deps and update as needed
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pylint.main]
output-format = "colorized"
max-line-length=120
disable = [
  "all",

  # Some codes we will leave disabled
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring

  "R0801",  # duplicate-code
  "R0902",  # too-many-instance-attributes
  "R0903",  # too-few-public-methods
  "R0904",  # too-many-public-methods
  "R0911",  # too-many-return-statements
  "R0912",  # too-many-branches
  "R0913",  # too-many-arguments
  "R0914",  # too-many-locals
  "R0915",  # too-many-statements

  "W1514",  # unspecified-encoding
]

enable = [
  "C0206",  # consider-using-dict-items
  "C0209",  # consider-using-f-string
  "C0411",  # wrong-import-order

  "E1101",  # no-member

  "R0205",  # useless-object-inheritance
  "R0402",  # consider-using-from-import
  "R1701",  # consider-merging-isinstance
  "R1704",  # redefined-argument-from-local
  "R1705",  # no-else-return
  "R1710",  # inconsistent-return-statements
  "R1720",  # no-else-raise
  "R1724",  # no-else-continue
  "R1725",  # super-with-arguments
  "R1729",  # use-a-generator
  "R1735",  # use-dict-literal
  "R1730",  # consider-using-min-builtin
  "R1732",  # consider-using-with

  "W0102",  # dangerous-default-value
  "W0212",  # protected-access
  "W0707",  # raise-missing-from
  "W1203",  # logging-fstring-interpolation

]
