[build-system]
requires = ["setuptools>=45, <=67.7.2", "setuptools-scm[toml]>=6.2, <=7.1.0"]  # pin max versions of build deps and update as needed
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pylint.main]
output-format = "colorized"
max-line-length=120
disable = [
  # Some codes we will leave disabled
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring

  "R0801",  # duplicate-code
  "R0902",  # too-many-instance-attributes
  "R0903",  # too-few-public-methods
  "R0904",  # too-many-public-methods
  "R0911",  # too-many-return-statements
  "R0912",  # too-many-branches
  "R0913",  # too-many-arguments
  "R0914",  # too-many-locals
  "R0915",  # too-many-statements
  "R1702",  # too-many-nested-blocks

  "W0511",  # fixme
  "W1514",  # unspecified-encoding
  "W0718",  # broad-exception-caught
  "W0719",  # broad-exception-raised
]
