[metadata]
name = ansible-builder
author = Ansible, Inc.
author-email = info@ansible.com
summary = "A tool for building Ansible Execution Environments"
home-page = https://ansible-builder.readthedocs.io
description-file = README.md

[flake8]
max-line-length=160
ignore=E201,E203,E221,E225,E231,E241,E251,E261,E265,E303,W291,W391,W293,E731,F405
exclude=.tox

[entry_points]
console_scripts =
    ansible-builder = ansible_builder.cli:run

[files]
packages =
    ansible_builder
