[metadata]
name = ansible-builder
author = Ansible, Inc.
author_email = info@ansible.com
summary = "A tool for building Ansible Execution Environments"
home_page = https://ansible-builder.readthedocs.io
description_file = README.md

[flake8]
# W503 - Line break occurred before a binary operator
ignore=W503
max-line-length=160

[entry_points]
console_scripts =
    ansible-builder = ansible_builder.cli:run

[files]
packages =
    ansible_builder
