[metadata]
name = ansible-builder
author = Ansible, Inc.
author_email = info@ansible.com
summary = "A tool for building Ansible Execution Environments"
home_page = https://ansible-builder.readthedocs.io
description_file = README.md
description_content_type = text/markdown
license_file = LICENSE.md
license = Apache Software License, Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Build Tools
    Topic :: System :: Systems Administration
    Topic :: Utilities

[flake8]
# W503 - Line break occurred before a binary operator
ignore=W503
max-line-length=160

[entry_points]
console_scripts =
    ansible-builder = ansible_builder.cli:run

[files]
packages =
    ansible_builder
